# cg45-proj

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
include/: bounding_box.h  bus.h  camera.h  car.h  collision_manager.h  dynamic_object.h  entity.h  frog.h  game_manager.h  game_object.h  light_source.h  material.h  materials.h  opengl.h  orthogonal_camera.h  perspective_camera.h  river.h  road.h  singleton.h  static_object.h  timberlog.h  truck.h  tunnel.h  turtle.h  vector3.h  vector4.h
lab1/: t1.cpp  t2.cpp  t3.cpp
proj/: CMakeLists.txt  Makefile
proj/include/: bus.h  camera.h  car.h  dynamic_object.h  entity.h  frog.h  game_manager.h  game_object.h  light_source.h  opengl.h  perspective_camera.h  river.h  road.h  roadside.h  static_object.h  timberlog.h  turtle.h  vector3.h  vector4.h
proj/src/: camera.cpp  car.cpp  dynamic_object.cpp  frog.cpp  game_manager.cpp  light_source.cpp  main.cpp  river.cpp  static_object.cpp  vector3.cpp  vector4.cpp
src/: bounding_box.cpp  bus.cpp  camera.cpp  car.cpp  collision_manager.cpp  dynamic_object.cpp  entity.cpp  frog.cpp  frog.cpp~  frog_leg.cpp  game_manager.cpp  game_manager.cpp~  game_object.cpp  light_source.cpp  main.cpp  material.cpp  materials.cpp  opengl.cpp  orthogonal_camera.cpp  perspective_camera.cpp  river.cpp  road.cpp  static_object.cpp  timberlog.cpp  truck.cpp  tunnel.cpp  turtle.cpp  vector3.cpp  vector4.cpp
